st: add checksum

--- a/st/build
+++ b/st/build
@@ -3,7 +3,8 @@
 for patch in *.patch; do 
     patch -p1 < $patch
 done
-#patch -p1 < 01-font-and-padding.patch
+
+sed -i 's|Liberation Mono|Monospace|g' config.def.h
 
 make
 make PREFIX=/usr DESTDIR="$1" install
